# get-github-email

./: Cargo.toml  Readme.md  github-email-web-43d9ca144b84b38c.js  github-email-web-43d9ca144b84b38c_bg.wasm  github-email-web-52e53a295980ea55.js  github-email-web-52e53a295980ea55_bg.wasm  github-email-web-594e7f2f45658a67.js  github-email-web-594e7f2f45658a67_bg.wasm  github-email-web-a436ad4060517cf5.js  github-email-web-a436ad4060517cf5_bg.wasm  index.html
.github/workflows/: publish.yml
projects/github-email/: Cargo.toml  Readme.md
projects/github-email-web/: Cargo.toml  Readme.md  Trunk.toml  index.html
projects/github-email-web/src/: main.rs
projects/github-email-web/src/authors/: query.rs
projects/github-email-web/src/errors/: for_reqwest.rs  for_serde_json.rs
projects/github-email-web/src/methods/: by_user_events.rs
projects/github-email-web/tests/: main.rs
projects/github-email/src/: lib.rs
projects/github-email/src/authors/: mod.rs  query.rs
projects/github-email/src/errors/: for_serde_json.rs  mod.rs
projects/github-email/src/methods/: by_network_events.rs  by_repo_events.rs  by_user_events.rs  for_url_dispatch.rs  mod.rs
projects/github-email/tests/: main.rs
