[package]
name = "github-email"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Get email from github account"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#octocrab = "0.17.0"
itertools = "0.10.5"
url = "2.3.1"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }

[features]
default = []
